--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"file-saver": "^2.0.5",
+		"jszip": "^3.10.1",
 		"preact": "^10.13.1",
 		"preact-iso": "^2.3.1",
 		"preact-render-to-string": "^6.2.1",
@@ -15,6 +17,7 @@
 	},
 	"devDependencies": {
 		"@preact/preset-vite": "^2.5.0",
+		"@types/file-saver": "^2.0.5",
 		"eslint": "^8.49.0",
 		"eslint-config-preact": "^1.3.0",
 		"typescript": "^5.2.2",
