--- a/package.json
+++ b/package.json
@@ -1,26 +1,47 @@
 {
-	"name": "example",
-	"private": true,
+	"name": "i18n-xlsx-to-json-directory",
+	"version": "0.1.0",
+	"description": "Library that converts .xlsx file into json directory structure used by i18next.",
 	"type": "module",
+	"private": false,
+	"keywords": [
+		"i18n",
+		"i18next",
+		"xlsxToJson"
+	],
+	"author": {
+		"name": "Kyeonghwan Son",
+		"email": "snapperbay4453@gmail.com",
+		"url": "https://snapperbay4453.github.io"
+	},
+	"main": "./dist/index.js",
+	"bugs": {
+		"url": "https://github.com/snapperbay4453/i18n-xlsx-to-json-directory/issues"
+	},
 	"scripts": {
-		"dev": "vite",
-		"build": "vite build",
-		"preview": "vite preview"
+		"build": "rollup -c",
+		"watch": "rollup -cw"
 	},
 	"dependencies": {
-		"file-saver": "^2.0.5",
+		"@rollup/plugin-alias": "^5.0.0",
+		"@rollup/plugin-eslint": "^9.0.4",
+		"@rollup/plugin-node-resolve": "^15.2.1",
+		"@rollup/plugin-terser": "^0.4.3",
+		"file-saver-es": "^2.0.5",
 		"jszip": "^3.10.1",
-		"preact": "^10.13.1",
-		"preact-iso": "^2.3.1",
-		"preact-render-to-string": "^6.2.1",
+		"rollup": "^3.29.1",
+		"rollup-plugin-commonjs": "^10.1.0",
+		"rollup-plugin-dts": "^6.0.2",
+		"rollup-plugin-typescript2": "^0.35.0",
 		"xlsx": "https://cdn.sheetjs.com/xlsx-0.20.0/xlsx-0.20.0.tgz"
 	},
 	"devDependencies": {
-		"@preact/preset-vite": "^2.5.0",
 		"@types/file-saver": "^2.0.5",
+		"@types/node": "^20.6.0",
+		"@typescript-eslint/parser": "^6.7.0",
 		"eslint": "^8.49.0",
-		"eslint-config-preact": "^1.3.0",
-		"typescript": "^5.2.2",
-		"vite": "^4.3.2"
-	}
+		"tslib": "^2.6.2",
+		"typescript": "^5.2.2"
+	},
+	"license": "Apache-2.0"
 }
