--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,8 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# npm
 node_modules
-dist
-dist-ssr
-*.local
 
 # Editor directories and files
 .vscode/*
@@ -22,3 +20,8 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Dist and local
+dist
+dist-ssr
+*.local
