--- a/.npmignore
+++ b/.npmignore
@@ -7,11 +7,6 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
-
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
@@ -22,3 +17,16 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# npm
+node_modules
+
+# dev
+src
+.eslintrc.json
+.gitignore
+rollup.config.json
+tsconfig.json
+
+# GIT
+.git
