--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
 	},
 	"scripts": {
 		"build": "rollup -c",
-		"watch": "rollup -cw"
+		"watch": "rollup -cw",
+		"prepare": "rimraf --glob 'dist/*' && npm run build"
 	},
 	"dependencies": {
 		"file-saver-es": "^2.0.5",
@@ -36,6 +37,7 @@
 		"@types/node": "^20.6.0",
 		"@typescript-eslint/parser": "^6.7.0",
 		"eslint": "^8.49.0",
+		"rimraf": "^5.0.1",
 		"rollup": "^3.29.1",
 		"rollup-plugin-commonjs": "^10.1.0",
 		"rollup-plugin-dts": "^6.0.2",
