feat: create zip-to-xlsx function, rename convertI18XlsxToJsonDirectory method

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
 		"checkJs": true,
 		"declaration": true,  
     "declarationDir": "dist/types",
+    "downlevelIteration": true,
     "importHelpers": true,
 		"lib": [ 
 			"dom",
