--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
 		"url": "https://github.com/snapperbay4453/i18n-xlsx-to-json-directory/issues"
 	},
 	"scripts": {
-		"build": "rimraf --glob dist && rollup -c",
-		"watch": "rimraf --glob dist && rollup -cw"
+		"__clear": "rimraf --glob dist",
+		"build": "npm run __clear && rollup -c",
+		"watch": "npm run __clear && rollup -cw"
 	},
 	"dependencies": {
 		"commander": "^11.0.0",
@@ -40,12 +41,12 @@
 		"@types/node": "^20.6.0",
 		"@typescript-eslint/parser": "^6.7.0",
 		"eslint": "^8.49.0",
+		"http-server": "^14.1.1",
 		"rimraf": "^5.0.1",
 		"rollup": "^3.29.1",
 		"rollup-plugin-commonjs": "^10.1.0",
 		"rollup-plugin-dts": "^6.0.2",
 		"rollup-plugin-typescript2": "^0.35.0",
-		"tslib": "^2.6.2",
 		"typescript": "^5.2.2"
 	},
 	"license": "Apache-2.0"
