--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
 	},
 	"scripts": {
 		"__clear": "rimraf --glob dist",
+		"lint": "eslint ./src",
+		"test": "jest",
 		"build": "npm run __clear && rollup -c",
 		"watch": "npm run __clear && rollup -cw"
 	},
@@ -38,15 +40,18 @@
 		"@rollup/plugin-node-resolve": "^15.2.1",
 		"@rollup/plugin-terser": "^0.4.3",
 		"@types/file-saver": "^2.0.5",
+		"@types/jest": "^29.5.5",
 		"@types/node": "^20.6.0",
 		"@typescript-eslint/parser": "^6.7.0",
 		"eslint": "^8.49.0",
 		"http-server": "^14.1.1",
+		"jest": "^29.7.0",
 		"rimraf": "^5.0.1",
 		"rollup": "^3.29.1",
 		"rollup-plugin-commonjs": "^10.1.0",
 		"rollup-plugin-dts": "^6.0.2",
 		"rollup-plugin-typescript2": "^0.35.0",
+		"ts-jest": "^29.1.1",
 		"typescript": "^5.2.2"
 	},
 	"license": "Apache-2.0"
