--- a/package.json
+++ b/package.json
@@ -1,12 +1,18 @@
 {
 	"name": "i18n-xlsx-to-json-directory",
 	"version": "0.3.4",
-	"description": "Library that converts .xlsx file into json directory structure used by i18next.",
+	"description": "Library that converts xlsx file into json directory structure used by i18next.",
 	"type": "module",
 	"private": false,
 	"keywords": [
+		"convert",
+		"excel",
+		"excelToJson",
 		"i18n",
 		"i18next",
+		"jsonToExcel",
+		"jsonToXlsx",
+		"xlsx",
 		"xlsxToJson"
 	],
 	"author": {
@@ -16,7 +22,7 @@
 	},
 	"exports": {
 		"./browser": "./dist/browser.js",
-		"./node": "./dist/node.js"
+		"./node": "./dist/node.cjs"
 	},
 	"bugs": {
 		"url": "https://github.com/snapperbay4453/i18n-xlsx-to-json-directory/issues"
@@ -27,6 +33,9 @@
 		"test": "jest",
 		"build": "npm run __clear && rollup -c",
 		"watch": "npm run __clear && rollup -cw"
+	},
+	"bin": {
+		"i18n-xlsx-to-json-directory": "./dist/node.cjs"
 	},
 	"dependencies": {
 		"commander": "^11.0.0",
