--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "i18n-xlsx-to-json-directory",
 	"version": "0.4.0",
-	"description": "Library that converts xlsx file into json directory structure used by i18next.",
+	"description": "Library that converts xlsx file into json directory structure used by i18next, and vice versa.",
 	"type": "module",
 	"private": false,
 	"keywords": [
