--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 	},
 	"scripts": {
 		"__clear": "rimraf --glob dist",
+		"check-updates": "npx npm-check-updates -u",
 		"lint": "eslint ./src",
 		"test": "jest",
 		"build": "npm run __clear && rollup -c",
@@ -38,28 +39,28 @@
 		"i18n-xlsx-to-json-directory": "./dist/node.cjs"
 	},
 	"dependencies": {
-		"commander": "^11.0.0",
+		"commander": "^11.1.0",
 		"file-saver-es": "^2.0.5",
 		"jszip": "^3.10.1",
 		"xlsx": "https://cdn.sheetjs.com/xlsx-0.20.0/xlsx-0.20.0.tgz"
 	},
 	"devDependencies": {
-		"@rollup/plugin-alias": "^5.0.0",
-		"@rollup/plugin-eslint": "^9.0.4",
-		"@rollup/plugin-node-resolve": "^15.2.1",
-		"@rollup/plugin-terser": "^0.4.3",
-		"@types/file-saver": "^2.0.5",
-		"@types/jest": "^29.5.5",
-		"@types/node": "^20.6.0",
-		"@typescript-eslint/parser": "^6.7.0",
-		"eslint": "^8.49.0",
+		"@rollup/plugin-alias": "^5.0.1",
+		"@rollup/plugin-commonjs": "^25.0.7",
+		"@rollup/plugin-eslint": "^9.0.5",
+		"@rollup/plugin-node-resolve": "^15.2.3",
+		"@rollup/plugin-terser": "^0.4.4",
+		"@types/file-saver": "^2.0.6",
+		"@types/jest": "^29.5.6",
+		"@types/node": "^20.8.7",
+		"@typescript-eslint/parser": "^6.8.0",
+		"eslint": "^8.51.0",
 		"http-server": "^14.1.1",
 		"jest": "^29.7.0",
-		"rimraf": "^5.0.1",
+		"rimraf": "^5.0.5",
 		"rollup": "^3.29.1",
-		"rollup-plugin-commonjs": "^10.1.0",
-		"rollup-plugin-dts": "^6.0.2",
-		"rollup-plugin-typescript2": "^0.35.0",
+		"rollup-plugin-dts": "^6.1.0",
+		"rollup-plugin-typescript2": "^0.36.0",
 		"ts-jest": "^29.1.1",
 		"typescript": "^5.2.2"
 	},
